--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,4 @@
-# You can add one username per supported platform and one custom link
-github: denysdovhan
-patreon: denysdovhan
-open_collective: spaceship-prompt
-ko_fi: # Replace with your Ko-fi username
-custom: [buymeacoffee.com/denysdovhan]
+github: noraj
+issuehunt: noraj
+ko_fi: noraj
+liberapay: noraj
